Add GitHub links to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,3 +17,5 @@ Suggests:
 Config/testthat/edition: 3
 Imports: 
     stats
+URL: https://github.com/felixkaiho/felixor
+BugReports: https://github.com/felixkaiho/felixor/issues
